# Example-Python-Daemon

./: README.md  example-daemon.py  example-daemon.service  example-smax-daemon.py  example-smax-daemon.service  install.sh  on-start.sh  pyproject.toml
src/example_smax_hardware/: __init__.py  example_hardware.py
src/hardware/: example-smax-hardware.py
src/smax-daemon/: daemon_config.json  example-smax-daemon.py  example-smax-daemon.service  install.sh  on-start.sh
src/smax_daemon/: daemon_config.json  example-smax-daemon.service  example_hardware_interface.py  example_smax_daemon.py  example_smax_daemon.service  install.sh  on-start.sh  on_start.sh  smax_config.json
